# rust-course-pastebin

./: Cargo.toml
src/: cli.rs  main.rs  service.rs  state.rs
